# steuerung_gersbach

./: CMakeLists.txt  README.md  controller.cpp  controller.h  main.cpp  mainwindow.cpp  mainwindow.h  settings.cpp  settings.h
.github/workflows/: cmake.yml
include/: tomlcpp.hpp
